# prosperity4-alpha

./: .gitignore  CLAUDE.md  LICENSE  README.md  STATE.md  pyproject.toml
.github/workflows/: ci.yml  flatten-parity.yml
docs/: DECISIONS.md  PLAN.md
docs/results/round1/: backtest.md  book_shape.md  regime.md  starter_baseline.md
docs/results/round2/: backtest.md  regime.md
docs/results/round3/: backtest.md  optionsurface.md  regime.md
docs/results/round4/: backtest.md  counterparty.md
docs/results/round5/: backtest.md  grid_scan.md  leadlag.md
docs/results/stage8/: flatten.md
src/p4alpha/core/: execution.py  fair_value.py  indicators.py  options.py  ou.py
src/p4alpha/flatten/: flatten.py
src/p4alpha/harness/: attribution.py  run.py
src/p4alpha/research/: book_shape.py  cache.py  counterparty.py  gamma_scalp_control.py  grid_scan.py  leadlag.py  optionsurface.py  regime.py
src/p4alpha/strategies/: round1.py  round2.py  round3.py  round4.py  round5.py
submissions/: round1_submission.py  round2_submission.py  round3_submission.py  round4_submission.py  round5_submission.py
tests/: test_import_boundaries.py
tests/core/: test_execution.py  test_fair_value.py  test_indicators.py  test_options.py  test_ou.py
tests/fixtures/: bidder.py  no_trader_class.py  starter.py
tests/flatten/: test_flatten.py  test_parity.py
tests/harness/: test_attribution.py  test_run.py
tests/research/: test_book_shape.py  test_cache.py  test_counterparty.py  test_gamma_scalp_control.py  test_grid_scan.py  test_leadlag.py  test_optionsurface.py  test_regime.py
tests/strategies/: test_round1.py  test_round2.py  test_round3.py  test_round4.py  test_round5.py
