[project]
name = "p4alpha"
version = "0.1.0"
description = "Research-driven recreation of winning IMC Prosperity 4 algorithmic strategies with fill-faithful backtesting."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "prosperity4btest==5.0.0",
]

[project.optional-dependencies]
research = [
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "matplotlib>=3.9",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/p4alpha"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
