[project]
name = "p4alpha"
version = "0.1.0"
description = "Research-driven recreation of winning IMC Prosperity 4 algorithmic strategies with fill-faithful backtesting."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "prosperity4btest==5.0.0",
]

[project.optional-dependencies]
research = [
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "matplotlib>=3.9",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/p4alpha"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
# submissions/ is a generated build artefact (src/p4alpha/flatten/flatten.py,
# Stage 8): concatenated from already-lint-clean source, so linting it again
# fights the tool for no benefit (e.g. isort cannot see one clean top-of-file
# import block once several modules' own tiny import sections are concatenated
# in sequence). Correctness is judged by the parity harness and the dedicated
# syntax/banned-import tests (tests/flatten/), not ruff.
extend-exclude = ["submissions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "parity: full-engine flatten<->source PnL parity backtests against real round data (slow); run explicitly via `-m parity`, e.g. by the flatten-parity CI job",
]
